--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>360 Viewer - Laplace</title>
+    <title>360 Viewer - João Ramalho</title>
     <link href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@3.5.1/dist/photo-sphere-viewer.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <style>
@@ -70,53 +70,68 @@
     <div id="viewer"></div>
     <div id="gallery">
       <div class="alignment">
-        <button class="item active" data-andar="lazer-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="lazer-andar">Área de Lazer</div>
-        </button>
-        <button class="item" data-andar="2-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="2-andar">2º andar</div>
+        <button class="item" data-andar="3-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="3-andar">3º andar</div>
         </button>
         <button class="item" data-andar="4-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="4-andar">4º andar</div>
         </button>
+        <button class="item" data-andar="5-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="5-andar">5º andar</div>
+        </button>
         <button class="item" data-andar="6-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="6-andar">6º andar</div>
+        </button>
+        <button class="item" data-andar="7-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="7-andar">7º andar</div>
         </button>
         <button class="item" data-andar="8-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="8-andar">8º andar</div>
         </button>
+        <button class="item" data-andar="9-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="9-andar">9º andar</div>
+        </button>
         <button class="item" data-andar="10-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="10-andar">10º andar</div>
+        </button>
+        <button class="item" data-andar="11-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="11-andar">11º andar</div>
         </button>
         <button class="item" data-andar="12-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="12-andar">12º andar</div>
         </button>
-        <button class="item" data-andar="14-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="14-andar">14º andar</div>
+        <button class="item" data-andar="13-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="13-andar">13º andar</div>
+        </button>
+        <button class="item" data-andar="15-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="15-andar">15º andar</div>
         </button>
         <button class="item" data-andar="16-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="16-andar">16º andar</div>
         </button>
+        <button class="item" data-andar="17-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="17-andar">17º andar</div>
+        </button>
         <button class="item" data-andar="18-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="18-andar">18º andar</div>
+        </button>
+        <button class="item" data-andar="19-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="19-andar">19º andar</div>
         </button>
         <button class="item" data-andar="20-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="20-andar">20º andar</div>
         </button>
+        <button class="item" data-andar="21-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="21-andar">21º andar</div>
+        </button>
         <button class="item" data-andar="22-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="22-andar">22º andar</div>
         </button>
-        <button class="item" data-andar="24-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="24-andar">24º andar</div>
-        </button>
-        <button class="item" data-andar="26-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="26-andar">26º andar</div>
-        </button>
-        <button class="item" data-andar="duplex-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="duplex-andar">Duplex<br/>Superior</div>
+        <button class="item" data-andar="23-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="23-andar">23º andar</div>
         </button>
       </div>
     </div>
-    <script src="./bundle.js?21"></script>
+    <script src="./bundle.js?21aa"></script>
   </body>
 </html>
