--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
           z-index: 10;
           top: 50px;
           right: 50px;
+        } 
+        #logo img {
+          height: 60px;
+          width: 60px;
         }
         #viewer {
           width: 100vw;
