remove first floor

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <div id="viewer"></div>
     <div id="gallery">
       <div class="alignment">
-        <button class="item" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+<!--         <button class="item" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="1-andar">Térreo</div>
-        </button>
+        </button> -->
         <button class="item" data-andar="5-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="5-andar">5º andar</div>
         </button>
@@ -91,6 +91,6 @@
         </button>
       </div>
     </div>
-    <script src="./bundle.js?aaa"></script>
+    <script src="./bundle.js?aaa22"></script>
   </body>
 </html>
