--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
 <!--         <button class="item" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="1-andar">Térreo</div>
         </button> -->
-        <button class="item" data-andar="5-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+        <button class="item active" data-andar="5-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="5-andar">5º andar</div>
+        </button>
+        <button class="item" data-andar="10-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="10-andar">10º andar</div>
         </button>
         <button class="item" data-andar="15-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="15-andar">15º andar</div>
