--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>360 Viewer - Carandá Torre 1</title>
+    <title>360 Viewer - Oscar Freire</title>
     <link href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@3.5.1/dist/photo-sphere-viewer.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <style>
@@ -74,26 +74,42 @@
     <div id="viewer"></div>
     <div id="gallery">
       <div class="alignment">
-<!--         <button class="item" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+
+        <button class="item active" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="1-andar">Térreo</div>
-        </button> -->
-        <button class="item active" data-andar="5-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="5-andar">5º andar</div>
+        </button>
+        <button class="item" data-andar="2-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="2-andar">2º andar</div>
+        </button>
+        <button class="item" data-andar="4-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="4-andar">4º andar</div>
+        </button>
+        <button class="item" data-andar="6-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="6-andar">6º andar</div>
+        </button>
+        <button class="item" data-andar="8-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="8-andar">8º andar</div>
         </button>
         <button class="item" data-andar="10-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="10-andar">10º andar</div>
         </button>
-        <button class="item" data-andar="15-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="15-andar">15º andar</div>
+        <button class="item" data-andar="12-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="12-andar">12º andar</div>
         </button>
-        <button class="item" data-andar="20-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="20-andar">20º andar</div>
+        <button class="item" data-andar="14-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="14-andar">14º andar</div>
         </button>
-        <button class="item" data-andar="24-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="24-andar">24º andar</div>
+        <button class="item" data-andar="16-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="16-andar">16º andar</div>
+        </button>
+        <button class="item" data-andar="18-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="18-andar">18º andar</div>
+        </button>
+        <button class="item" data-andar="21-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="21-andar">21º andar</div>
         </button>
       </div>
     </div>
-    <script src="./bundle.js?aaa22"></script>
+    <script src="./bundle.js?bbcy11"></script>
   </body>
 </html>
