--- a/index.html
+++ b/index.html
@@ -74,39 +74,38 @@
     <div id="viewer"></div>
     <div id="gallery">
       <div class="alignment">
-
         <button class="item active" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="1-andar">Térreo</div>
+          <div class="title" data-andar="1-andar">Lazer - 6º pavimento</div>
         </button>
         <button class="item" data-andar="2-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="2-andar">2º andar</div>
+          <div class="title" data-andar="2-andar">8º pavimento</div>
         </button>
         <button class="item" data-andar="4-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="4-andar">4º andar</div>
+          <div class="title" data-andar="4-andar">10º pavimento</div>
         </button>
         <button class="item" data-andar="6-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="6-andar">6º andar</div>
+          <div class="title" data-andar="6-andar">12º pavimento</div>
         </button>
         <button class="item" data-andar="8-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="8-andar">8º andar</div>
+          <div class="title" data-andar="8-andar">14º pavimento</div>
         </button>
         <button class="item" data-andar="10-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="10-andar">10º andar</div>
+          <div class="title" data-andar="10-andar">16º pavimento</div>
         </button>
         <button class="item" data-andar="12-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="12-andar">12º andar</div>
+          <div class="title" data-andar="12-andar">18º pavimento</div>
         </button>
         <button class="item" data-andar="14-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="14-andar">14º andar</div>
+          <div class="title" data-andar="14-andar">20º pavimento</div>
         </button>
         <button class="item" data-andar="16-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="16-andar">16º andar</div>
+          <div class="title" data-andar="16-andar">22º pavimento</div>
         </button>
         <button class="item" data-andar="18-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="18-andar">18º andar</div>
+          <div class="title" data-andar="18-andar">24º pavimento</div>
         </button>
         <button class="item" data-andar="21-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="21-andar">21º andar</div>
+          <div class="title" data-andar="21-andar">27º pavimento</div>
         </button>
       </div>
     </div>
