--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div id="gallery">
       <div class="alignment">
         <button class="item active" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="1-andar">Lazer - 6º pavimento</div>
+          <div class="title" data-andar="1-andar">Lazer<br/>6º pavimento</div>
         </button>
         <button class="item" data-andar="2-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
           <div class="title" data-andar="2-andar">8º pavimento</div>
