--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="title" data-andar="18-andar">24º pavimento</div>
         </button>
         <button class="item" data-andar="21-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="21-andar">27º pavimento</div>
+          <div class="title" data-andar="21-andar">26º Duplex <br/>superior</div>
         </button>
       </div>
     </div>
