--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>360 Viewer - Oscar Freire 2</title>
+    <title>360 Viewer - Fábio Prado</title>
     <link href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@3.5.1/dist/photo-sphere-viewer.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <style>
@@ -69,46 +69,31 @@
   </head>
   <body>
     <div id="logo">
-      <img src='./img/cyrela.png' height='120px' />
+      <img src='./img/cyrela.png' height='80px' />
     </div>
     <div id="viewer"></div>
     <div id="gallery">
       <div class="alignment">
         <button class="item active" data-andar="1-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="1-andar">Lazer<br/>6º pavimento</div>
-        </button>
-        <button class="item" data-andar="2-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="2-andar">8º pavimento</div>
+          <div class="title" data-andar="1-andar">1º pavimento<br/>Lazer</div>
         </button>
         <button class="item" data-andar="4-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="4-andar">10º pavimento</div>
+          <div class="title" data-andar="4-andar">4º pavimento</div>
         </button>
-        <button class="item" data-andar="6-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="6-andar">12º pavimento</div>
-        </button>
-        <button class="item" data-andar="8-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="8-andar">14º pavimento</div>
+        <button class="item" data-andar="7-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="7-andar">7º pavimento</div>
         </button>
         <button class="item" data-andar="10-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="10-andar">16º pavimento</div>
+          <div class="title" data-andar="10-andar">10º pavimento</div>
         </button>
-        <button class="item" data-andar="12-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="12-andar">18º pavimento</div>
+        <button class="item" data-andar="15-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="15-andar">15º pavimento</div>
         </button>
-        <button class="item" data-andar="14-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="14-andar">20º pavimento</div>
-        </button>
-        <button class="item" data-andar="16-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="16-andar">22º pavimento</div>
-        </button>
-        <button class="item" data-andar="18-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="18-andar">24º pavimento</div>
-        </button>
-        <button class="item" data-andar="21-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
-          <div class="title" data-andar="21-andar">26º Duplex <br/>superior</div>
+        <button class="item" data-andar="20-andar" style='background-image: url(./img/thumbnails/thumb.jpg)'>
+          <div class="title" data-andar="20-andar">20º pavimento</div>
         </button>
       </div>
     </div>
-    <script src="./bundle.js?bbcy11"></script>
+    <script src="./bundle.js?af3211"></script>
   </body>
 </html>
